<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:gravity="center_horizontal"
    tools:context=".activities.Login">


    <androidx.appcompat.widget.Toolbar
        android:padding="@dimen/_8sdp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="@color/card_color"
            app:cardElevation="2dp"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/backward"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/toolbar_title"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Log in"
            android:textColor="#000000"
            android:layout_gravity="center" />

        <TextView
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_16sdp"
            android:id="@+id/skip"
            android:fontFamily="@font/poppins"
            android:textSize="@dimen/_14sdp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="Skip"
            android:textColor="#000000"
            android:layout_gravity="right" />



    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <LinearLayout
            android:padding="@dimen/_8sdp"
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardElevation="2dp"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/fb_logo"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_in_with_facebook"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardElevation="2dp"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/apple_logo"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_in_with_apple"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:background="@drawable/shape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="15dp"
                app:cardBackgroundColor="@color/card_color"
                app:cardElevation="2dp"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                >
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_logo"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textSize="@dimen/_12sdp"
                android:textColor="#000000"
                android:fontFamily="@font/poppins"
                android:text="@string/sign_in_with_google"/>


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_15sdp">
            <View
                android:background="#E6E6E6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:text="Or"
                android:textColor="#000"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12sdp"/>

            <View
                android:background="#E6E6E6"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <EditText
            android:id="@+id/edUsername"
            android:inputType="textEmailAddress"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/poppins"
            android:hint="Email Address"
            android:background="@drawable/edt_bg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/_40sdp"/>
        <EditText
            android:id="@+id/edPassword"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center_vertical"
            android:textSize="12sp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/poppins"
            android:hint="Password"
            android:background="@drawable/edt_bg"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/_40sdp"/>

        <Button
            android:id="@+id/btnLogin"
            android:textColor="#FFF"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins"
            android:textAllCaps="false"
            android:text="Log in"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:height="56dp"
            android:background="@drawable/green_btn"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins"
            android:text="Forgot your password?"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/resetPassowrd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/reset_password"
            android:textColor="#45BC1B"/>
        <View
            android:layout_marginVertical="@dimen/_5sdp"
            android:background="#E6E6E6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/don_t_have_an_account"
            android:textColor="#000"/>
        <TextView
            android:id="@+id/new_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/poppins"
            android:text="@string/create_new_acoount"
            android:textColor="#45BC1B"/>


    </LinearLayout>


</LinearLayout>